--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -6,31 +6,7 @@
 
     <div id="thumbnails" class="clearfix">
 
-      <div class="hexagon">
-        <div class="hex1">
-          <div class="hex2">
-            <img class="sm1" src="/pictures/blue.jpg">
-          </div>
-        </div>
-      </div>
-
-      <div class="hexagon">
-        <div class="hex1">
-          <div class= "hex2">
-            <img class="sm2" src="/pictures/Petra1.jpg">
-          </div>
-        </div>
-      </div>
-
-      <div class="hexagon">
-        <div class="hex1">
-          <div class= "hex2">
-            <img class="sm3" src="/pictures/owl.jpg">
-          </div>
-        </div>
-      </div>
-
-      <div class="hexagon">
+    <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
             <img class="sm4" src="/pictures/marvintro.jpg">
@@ -50,6 +26,14 @@
         <div class="hex1">
           <div class= "hex2">
             <img class="sm6" src="/pictures/ThomMarv.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm2" src="/pictures/Petra1.jpg">
           </div>
         </div>
       </div>
@@ -77,6 +61,72 @@
           </div>
         </div>
       </div>
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm10" src="/pictures/atoc.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm3" src="/pictures/owl.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm11" src="/pictures/aoab.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class="hex2">
+            <img class="sm1" src="/pictures/blue.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm15" src="/pictures/beeearrings1.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm13" src="/pictures/animalcell.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm12" src="/pictures/armcuff1.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm14" src="/pictures/armcuff2.jpg">
+          </div>
+        </div>
+      </div>
+
+      <!--16-->
+
     </div>
 
     <div id="enlarge" class="clearfix">
@@ -106,12 +156,34 @@
       <span class=" cap7 caption">
       <img class="lg7" src="/pictures/petra.jpg">Petra, As All her Kind, is Drawn to Red Flowers Especially</span>
 
-      <span class=" cap8 caption">
+      <span class="cap8 caption">
       <img class="lg8" src="/pictures/Mousebee_1.jpg">Introducing: Julianne! The Specialist
       </span>
 
-      <span class=" cap9 caption">
+      <span class="cap9 caption">
       <img class="lg9" src="/pictures/Mousebee_3.jpg">Julianne in her Element</span>
+
+      <span class=" cap10 caption">
+      <img class="lg10" src="/pictures/atoc.jpg">Adenine to Thymine friendship necklaces</span>
+
+      <span class="cap11 caption">
+      <img class="lg11" src="/pictures/aoab.jpg">Anatomy of a Beekeeper in Circular Galifreyan</span>
+
+
+    <span class="cap12 caption">
+      <img class="lg12" src="/pictures/animalcell.jpg">acrylic painted Animal Cell, part of my Molecular Biology Jewelry Series</span>
+
+      <span class="cap13 caption">
+      <img class="lg13" src="/pictures/armcuff1.jpg">A Tie-On Arm Cuff, for Keeping Cards Without a Wallet</span>
+
+      <span class="cap14 caption">
+      <img class="lg14" src="/pictures/armcuff2.jpg">Angle 2 of Arm Cuff</span>
+
+      <span class="cap15 caption">
+      <img class="lg15" src="/pictures/beeearrings1.jpg">Beaded Bee Earrings</span>
+
+      <!--<span class=" cap16 caption">
+      <img class="lg16" src="/pictures/aoab.jpg">Anatomy of a Beekeeper in Circular Galifreyan</span>-->
 
     </div>
 
