--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 
     <nav>
       <a href="/index.html"><img class="internal" src="/assets/stamphome.png"></a>
-      <a href="/about.html"><img class="internal" src="/assets/stampabout.png"></a>
+      <a href="/about/"><img class="internal" src="/assets/stampabout.png"></a>
       <a href="/gallery/index.html"><img class="internal" src="/assets/stampgallery.png"></a>
       <img class="internal" src="/assets/stampss.png">
 
