--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,16 @@
----
-layout: default
----
-<article class="post">
+<!DOCTYPE html>
+<html>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+  {% include head.html %}
 
-  <div class="post-content">
-    {{ content }}
-  </div>
+  <body>
 
-</article>
+    {% include header.html %}
+
+    {{ contest }}
+
+    {% include footer.html %}
+
+  </body>
+
+</html>
