--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -61,6 +61,79 @@
           </div>
         </div>
       </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm17" src="/pictures/brookesm.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm18" src="/pictures/brooke2.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm12" src="/pictures/armcuff1.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm14" src="/pictures/armcuff2.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm19" src="/pictures/catwallet.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm22" src="/pictures/mollywallet.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm24" src="/pictures/patwallet.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm21" src="/pictures/kindlecase.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm23" src="/pictures/pateye.jpg">
+          </div>
+        </div>
+      </div>
+
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
@@ -73,6 +146,14 @@
         <div class="hex1">
           <div class= "hex2">
             <img class="sm3" src="/pictures/owl.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm13" src="/pictures/animalcell.jpg">
           </div>
         </div>
       </div>
@@ -104,7 +185,7 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm13" src="/pictures/animalcell.jpg">
+            <img class="sm16" src="/pictures/bbwass.jpg">
           </div>
         </div>
       </div>
@@ -112,20 +193,16 @@
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm12" src="/pictures/armcuff1.jpg">
+            <img class="sm20" src="/pictures/dna2.jpg">
           </div>
         </div>
       </div>
 
-      <div class="hexagon">
-        <div class="hex1">
-          <div class= "hex2">
-            <img class="sm14" src="/pictures/armcuff2.jpg">
-          </div>
-        </div>
-      </div>
 
-      <!--16-->
+
+
+
+      <!--25-->
 
     </div>
 
@@ -182,8 +259,32 @@
       <span class="cap15 caption">
       <img class="lg15" src="/pictures/beeearrings1.jpg">Beaded Bee Earrings</span>
 
-      <!--<span class=" cap16 caption">
-      <img class="lg16" src="/pictures/aoab.jpg">Anatomy of a Beekeeper in Circular Galifreyan</span>-->
+      <span class=" cap16 caption">
+      <img class="lg16" src="/pictures/bbwass.jpg">Featured on boingboing.net, We Are Star Stuff in Amino Acids</span>
+
+      <span class=" cap17 caption">
+      <img class="lg17" src="/pictures/brookelg.jpg">Arm cuff, knitted</span>
+
+      <span class=" cap18 caption">
+      <img class="lg18" src="/pictures/brooke2.jpg">Arm cuff, knitted</span>
+
+      <span class=" cap19 caption">
+      <img class="lg19" src="/pictures/catwallet.jpg">Painted Wallet, featuring my cats</span>
+
+      <span class=" cap20 caption">
+      <img class="lg20" src="/pictures/dna2.jpg">Wire wrapped necklace, DNA with Hydrogen bonds</span>
+
+      <span class=" cap21 caption">
+      <img class="lg21" src="/pictures/kindlecase.jpg">Kindle Case Featuring Sloth Holmes and Watson</span>
+
+      <span class=" cap22 caption">
+      <img class="lg22" src="/pictures/mollywallet.jpg">Painted Wallet, featuring Molly</span>
+
+      <span class=" cap23 caption">
+      <img class="lg23" src="/pictures/pateye.jpg">My cat Patrick's eye</span>
+
+      <span class=" cap24 caption">
+      <img class="lg24" src="/pictures/patwallet.jpg">Painted Wallet, featuring Dr. Patrick Fibonacci Waffles</span>
 
     </div>
 
