gotta fix my js

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -198,11 +198,80 @@
         </div>
       </div>
 
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm25" src="/pictures/caffeine-use.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm26" src="/pictures/Carbon.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm27" src="/pictures/carbonandwater.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm28" src="/pictures/chessset3.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm29" src="/pictures/chessset2.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm30" src="/pictures/CTWColette.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm31" src="/pictures/CTWPharlain.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm32" src="/pictures/DNAnecklace.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm33" src="/pictures/EtOHgood.jpg">
+          </div>
+        </div>
+      </div>
 
 
-
-
-      <!--25-->
+      <!--34-->
 
     </div>
 
@@ -285,6 +354,34 @@
 
       <span class=" cap24 caption">
       <img class="lg24" src="/pictures/patwallet.jpg">Painted Wallet, featuring Dr. Patrick Fibonacci Waffles</span>
+
+      <span class=" cap25 caption">
+      <img class="lg25" src="/pictures/caffeine-use.jpg">Early prototype for wire-wrapped molecules, Caffeine</span>
+
+      <span class=" cap26 caption">
+      <img class="lg26" src="/pictures/Carbon.jpg">Wire wrapped molecule: Carbon</span>
+
+      <span class=" cap27 caption">
+      <img class="lg27" src="/pictures/carbonandwater.jpg">Wire wrapped Carbon and Water</span>
+
+      <span class=" cap28 caption">
+      <img class="lg28" src="/pictures/chessset3.jpg">Origami Chess Set</span>
+
+      <span class=" cap29 caption">
+      <img class="lg29" src="/pictures/chessset2.jpg">Origami Chess Set</span>
+
+      <span class=" cap30 caption">
+      <img class="lg30" src="/pictures/CTWColette.jpg">Beaded Choker for my friend's band "Choke the Word"</span>
+
+      <span class=" cap31 caption">
+      <img class="lg31" src="/pictures/CTWPharlain.jpg">Beaded Choker for my friend's band "Choke the Word"</span>
+
+      <span class=" cap32 caption">
+      <img class="lg32" src="/pictures/DNAnecklace.jpg">Prototype for DNA necklace, still using Hydrogen Bonds for clasps</span>
+
+      <span class=" cap33 caption">
+      <img class="lg33" src="/pictures/EtOHgood.jpg">Earrings of Alcohol, inspired by Champaigne</span>
+
 
     </div>
 
