--- a/_includes/home.html
+++ b/_includes/home.html
@@ -9,4 +9,5 @@
 
     <img class="comb" src="assets/HCWYM.png">
   </div>
+  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 </body>
