--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,9 @@ nav {
 .sm13, .sm14, .sm15, .sm16,
 .sm17, .sm18, .sm19, .sm20,
 .sm21, .sm22, .sm23, .sm24,
-.sm25, .sm26 {
+.sm25, .sm26, .sm27, .sm28,
+.sm29, .sm30, .sm31, .sm32,
+.sm33, .sm34, .sm35, .sm36 {
   height: 12.5em;
   width: auto;
 }
@@ -103,7 +105,9 @@ nav {
 .lg13, .lg14, .lg15, .lg16,
 .lg17, .lg18, .lg19, .lg20,
 .lg21, .lg22, .lg23, .lg24,
-.lg25, .lg26 {
+.lg25, .lg26, .lg27, .lg28,
+.lg29, .lg30, .lg31, .lg32,
+.lg33, .lg34, .lg35, .lg36 {
   width: 60%;
   height: auto;
   margin: 1em 20% 1em 20%;
@@ -127,7 +131,9 @@ nav {
 .cap13, .cap14, .cap15, .cap16,
 .cap17, .cap18, .cap19, .cap20,
 .cap21, .cap22, .cap23, .cap24,
-.cap25 {
+.cap25, .cap26, .cap27, .cap28,
+.cap29, .cap30, .cap31, .cap32,
+.cap33, .cap34, .cap35, .cap36 {
   text-align: center;
   color: black;
   position: absolute;
@@ -201,7 +207,7 @@ nav {
 /*--------------footer----------*/
 
 footer .wrapper{
-  margin: .5em 10%;
+  padding: .5em 10%;
 }
 footer {
   width: 100%;
