building a silly game

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -9,5 +9,6 @@
 
     <img class="comb" src="assets/HCWYM.png">
   </div>
+  <a href="/bee_game/index.html">Bee Game</a>
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 </body>
