--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
 
   <script src="/scripts/jquery-3.0.0.min.js"></script>
   <script src="/scripts/main.js"></script>
+  <script src="/scripts/bee.js"></script>
 
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
