hcwyp, close to done

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,7 @@
 
   <div class="wrapper">
     <nav>
-      <a href="https://www.etsy.com/shop/coletteisabella?ref=hdr_shop_menu">
-        <img class="links" src="/assets/stampetsy.png"></a>
+      <a href="https://www.instagram.com/coletteisabella/"><img class="links" src="/assets/stampstigram.png"></a>
       <a href="https://www.facebook.com/AnatomyOfABeekeeper/">
         <img class="links" src="/assets/stampface.png"></a>
       <a href="https://github.com/ColetteIsabella">
