--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,9 @@
       <a href="/index.html"><img class="internal" src="/assets/stamphome.png"></a>
       <a href="/about/"><img class="internal" src="/assets/stampabout.png"></a>
       <a href="/gallery/index.html"><img class="internal" src="/assets/stampgallery.png"></a>
-      <img class="internal" src="/assets/stampss.png">
+      <a href="/slothstories/"><img class="internal" src="/assets/stampss.png"></a>
 
-      <a href="https://www.etsy.com/shop/coletteisabella?ref=hdr_shop_menu"><img class="links" src="/assets/stampetsy.png"></a>
+      <a href="https://www.instagram.com/coletteisabella/"><img class="links" src="/assets/stampstigram.png"></a>
 
       <a href="https://www.facebook.com/AnatomyOfABeekeeper/"><img class="links" src="/assets/stampface.png"></a>
 
