--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,14 +1,14 @@
 <body>
   <div id="row1">
-    <img class="comb" src="assets/beewhois.png">
+    <a href="/about/"><img class="comb" src="assets/beewhois.png"></a>
     <a href="/gallery/index.html"><img class="comb" src="assets/gallery.png"></a>
-    <img class="comb" src="assets/FSS.png">
+    <a href="/slothstories/"><img class="comb" src="assets/FSS.png"></a>
   </div>
   <div id="row2">
     <a href="https://www.etsy.com/shop/coletteisabella?ref=hdr_shop_menu"><img class="comb" src="assets/come.png"></a>
 
-    <img class="comb" src="assets/HCWYM.png">
+    <a href="/hcwym/"><img class="comb" src="assets/HCWYM.png"></a>
   </div>
-  <a href="/bee_game/index.html">Bee Game</a>
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+  <!--<a href="/bee_game/index.html">Bee Game</a>-->
+
 </body>
